Closed
Bug 482604
Opened 16 years ago
Closed 16 years ago
MemoryProfiler missing some frees
Categories
(Tamarin Graveyard :: Garbage Collection (mmGC), defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: tierney, Unassigned)
Details
Attachments
(1 file)
478 bytes,
patch
|
treilly
:
review+
|
Details | Diff | Splinter Review |
MemoryProfiler was reporting much higher numbers for stack traces than it reported for total memory used. Turns out we were missing a call to FinalizeHook in GCLargeAlloc::Finalize. It was calling FreeHook, but that doesn't decrement the size/count for the stack trace.
Attachment #366661 -
Flags: review?(treilly)
Updated•16 years ago
|
Attachment #366661 -
Flags: review?(treilly) → review+
Reporter | ||
Comment 1•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment 2•16 years ago
|
||
Resolved fixed engineering / work item that has been pushed. Setting status to verified.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•