bug 482604 - Memory Profiler was missing some frees.  (r=treilly) GCLargeAlloc::Finalize was incorrectly calling FreeHook, just switch it to call FinalizeHook.